Update header title in portal.html to reflect the correct naming for the AWB portal

--- a/src/portal.html
+++ b/src/portal.html
@@ -92,7 +92,7 @@
 <body>
 
 <div id="root">
-  <h4>AmazonFlex AWB Record</h4>
+  <h4>AmazonFlex AWB Portal</h4>
 
   <!-- Search Container -->
   <div class="search-container">
