Update remark options in index.html for improved clarity and detail

--- a/src/index.html
+++ b/src/index.html
@@ -145,10 +145,16 @@ Functions:
         <select id="remark" required>
           <option value="" disabled selected>Choose a remark</option>
           <option value="Customer not available">Customer not available</option>
-          <option value="Customer Reject parcel">
-            Customer refused to accept
-          </option>
-          <option value="Cannot locate address">Cannot locate address</option>
+          <option value="Missed delivery - Bad weather / out of delivery time">Missed delivery</option>
+          <option value="Payment Not Ready">Payment Not Ready</option>
+          <option value="Unable to locate address">Unable to locate address</option>
+          <option value="Office closed">Office closed</option>
+          <option value="Unable to contact customer">Unable to contact customer</option>
+          <option value="Rejected - Not Required">Rejected - Not Required</option>
+          <option value="Rejected - Order Mismatch">Rejcted - Order Mismatch</option>
+          <option value="Parcel is missing">Parcel is missing</option>
+          <option value="Rejected - Damaged">Rejected - Damaged</option>
+          <option value="Customer Support marked attempted">Customer Support marked attempted</option>
         </select>
         <label for="remark">Remark</label>
       </div>
