Add ShowTourchButton option to QR code configuration in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -258,6 +258,7 @@ Functions:
             {
               fps: 10,
               qrbox: { width: 250, height: 250 },
+              ShowTourchButton: true
             },
             (decodedText) => {
               document.getElementById("awb").value = decodedText;
